# stm32-cmake

./: .gitignore  CMakeLists.txt  README.md  startup_stm32f411xe.s
cmake/: arm-none-eabi-gcc.cmake
src/: main.c
